--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prg8",
   "version": "1.0.0",
   "description": "PRG08 LLM app",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --env-file=.env --watch server.js"
