--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "type": "module",
   "dependencies": {
     "@langchain/openai": "^0.0.14",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "langchain": "^0.1.18"
