--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "langchain": "^0.1.18"
+    "langchain": "^0.1.18",
+    "node-fetch": "^3.3.2"
   }
 }
